# globalFantasyLeague

./: .gitignore  README.md  requirements.txt
app/: alembic.ini  authenticationUtils.py  crud.py  database.py  db.py  db_models.py  main.py  models.py  pyproject.toml  schemas.py
app/app/: crud.py  database.py  db.py  db_models.py  main.py  models.py  test.db
app/app.egg-info/: PKG-INFO  SOURCES.txt
app/fantasy/: models.py
app/fantasy_team/: fantasy_team_models.py
app/globalFantasyLeagueMigrations/: env.py
app/globalFantasyLeagueMigrations/versions/: 43de0465c856_initialize_databases.py  584ca546aada_initializing_the_database.py  7f5de60a0e02_initialize_databases.py  93886fe12b77_initialize_databases.py  9891c5718ddf_password_field_updated.py  e008510f4bb9_initializing_the_database.py
app/league/: league_models.py  league_routes.py  routes.py  schema.py
app/player/: player_model.py  schema.py
app/team/: schema.py  team_models.py  team_schema.py
app/usermanagement/: routes.py  schema.py  users_model.py  users_routes.py
src/: crud.py  main.py  models.py  schemas.py
