[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Pravesh Chapgain<spravesh1818@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.21.0"
psycopg2 = "^2.8.6"
alembic = "^1.4.2"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
